<resources>
    <string name="app_name">Hello Android Auto</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_xx">xx</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="demo_title">Demo</string>
    <string name="menu_debug_title">Debug</string>
    <string name="menu_exlap_stats_log_title">Logs</string>
    <string name="menu_test_notification_title">Test Notification</string>
    <string name="notification_channel_name">My App</string>
    <string name="notification_channel_description">My apps notificaiton channel</string>
    <string name="select_bluetooth_adapter">Select Bluetooth Adapter</string>
    <string name="connect">Connect</string>
    <string name="no_bluetooth_device">No Bluetooth Device</string>

    <string name="service_starting">Starting OBD connection..</string>
    <string name="service_started">OBD connection has started.</string>
    <string name="service_stopped">OBD connection has stopped.</string>
    <string name="notification_label">Tap to open OBD-Reader.</string>
    <string name="notification_action">Tap to open OBD-Reader</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ambient_temperature">Ambient Temperature</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="status_blue_connected">Bluetooth Connected</string>
    <string name="status_blue_error_connect">Error connecting bluetooth</string>
    <string name="status_blue_connecting">Bluetooth Connecting</string>
    <string name="status_blue_disabled">Bluetooth Disabled</string>
    <string name="status_blue_disconnected_ok">Bluetooth Disconnected Ok</string>
    <string name="VIN">VIN</string>
    <string name="speed">Speed</string>
    <string name="bat_remain">Bat Remain</string>
</resources>
